Hopefully fixed safe-area issue on ios

--- a/styles/background.css
+++ b/styles/background.css
@@ -14,6 +14,7 @@
     -webkit-background-size: contain;
     -moz-background-size: contain;
     -o-background-size: contain;
+    viewport-fit: cover;
 }
 
 .background.moving {
